--- a/default-trainers.css
+++ b/default-trainers.css
@@ -37,8 +37,8 @@
 }
 
 .left-section{
-  height:150px;
-  width:100%;
+  height:120px;
+  width:100px;
   background-position: center;
   background-size:contain;
   background-repeat: no-repeat;
