--- a/default.css
+++ b/default.css
@@ -217,7 +217,7 @@ section .container{
 }
 
 .facilities-container{
-  padding:0 3.5rem;
+  padding:0 2.5rem;
   position:relative;
   width:100%;
   display:flex;
@@ -227,8 +227,8 @@ section .container{
   gap: 2rem;
 }
 .facilities-container .box{
-  width:85px;
-  height:85px;
+  width:100px;
+  height:100px;
   position:relative;
   transition:0.5s;
   border-bottom: 3px solid var(--main-color);
@@ -286,14 +286,14 @@ section .container{
   height:30%;
   z-index:2;
   display:flex;
-  padding:10px 15px 10px;
+  padding:10px 7px 10px;
   align-items:end;
   overflow: hidden;
   text-align: right;
 }
 
 .facilities-container .facility-name{
-  font-size: .8rem;
+  font-size: .5rem;
 }
 
 .box .content-section .h-font, .box .content-section .p-font{
@@ -407,12 +407,11 @@ background-color: #00000091;
 }
 
 .logo-carousel{
-  display: flex;
+  display: none;
   margin:3rem 0 0;
   width:100%;
   overflow-x: hidden;
   background-color: #aaaaaa18;
-  padding:.5rem 0 .5rem 0;
 }
 
 .logo-carousel::-webkit-scrollbar{
@@ -476,7 +475,7 @@ background-color: #00000091;
 }
 
 .pricing-section{
-  margin:0;
+  margin:50px 0 0 0;
   display:flex;
   align-items: center;
   justify-content: center;
