--- a/default-trainers.css
+++ b/default-trainers.css
@@ -40,7 +40,7 @@
   height:120px;
   width:100px;
   background-position: center;
-  background-size:contain;
+  background-size:cover;
   background-repeat: no-repeat;
   border-radius: .4rem;
   margin-top: 1rem;
